--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 validation.moreThanOne=Must be more than 1
 validation.outOfStock=Quantity is out of stock
+validation.cartpage.quantity=Must be more or equal to 0
