--- a/core/src/main/resources/messages_ru.properties
+++ b/core/src/main/resources/messages_ru.properties
@@ -1,2 +1,3 @@
 validation.moreThanOne=Должно быть больше 1
 validation.outOfStock=Больше, чем есть на складе
+validation.cartpage.quantity=Должно быть больше или равно 0
