implemented OrderPageController and OrderOverviewPageController updated OrderDao and OrderService added OrderItemsValidator and PhoneNumberValidator

--- a/core/src/main/resources/messages_ru.properties
+++ b/core/src/main/resources/messages_ru.properties
@@ -1,3 +1,7 @@
 validation.moreThanOne=Должно быть больше 1
 validation.outOfStock=Больше, чем есть на складе
 validation.cartpage.quantity=Должно быть больше или равно 0
+validation.phoneNumber=Неправильный номер
+validation.name=Должно быть больше чем 2
+validation.address=Неправильный адрес
+validation.orderItems=Больше чем есть на складе
