--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
 validation.moreThanOne=Must be more than 1
 validation.outOfStock=Quantity is out of stock
 validation.cartpage.quantity=Must be more or equal to 0
+validation.phoneNumber=Invalid phone number
+validation.name=Must be more than 2
+validation.address=Invalid address
+validation.orderItems=Out of stock
