Admin area restriction with Spring Security implemented

--- a/core/src/main/resources/messages_ru.properties
+++ b/core/src/main/resources/messages_ru.properties
@@ -5,3 +5,5 @@ validation.phoneNumber=Неправильный номер
 validation.name=Должно быть больше чем 2
 validation.address=Неправильный адрес
 validation.orderItems=Больше чем есть на складе
+authentication.fails=Неправильный логин или пароль!
+authentication.logout=Вы вышли успешно.
