--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -5,3 +5,5 @@ validation.phoneNumber=Invalid phone number
 validation.name=Must be more than 2
 validation.address=Invalid address
 validation.orderItems=Out of stock
+authentication.fails=Invalid username and password!
+authentication.logout=You've been logged out successfully.
