--- a/core/src/main/resources/messages_ru.properties
+++ b/core/src/main/resources/messages_ru.properties
@@ -1,6 +1,7 @@
 validation.moreThanOne=Должно быть больше 1
 validation.outOfStock=Больше, чем есть на складе
 validation.cartpage.quantity=Должно быть больше или равно 0
+validation.cartpage.null=не существует
 validation.phoneNumber=Неправильный номер
 validation.name=Должно быть больше чем 2
 validation.address=Неправильный адрес
