QuickOrder validation updated

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -8,3 +8,4 @@ validation.address=Invalid address
 validation.orderItems=Out of stock
 authentication.fails=Invalid username and password!
 authentication.logout=You've been logged out successfully.
+typeMismatch.quickOrder.orderItems.quantity=not a number
