--- a/core/src/main/resources/messages_ru.properties
+++ b/core/src/main/resources/messages_ru.properties
@@ -8,3 +8,4 @@ validation.address=Неправильный адрес
 validation.orderItems=Больше чем есть на складе
 authentication.fails=Неправильный логин или пароль!
 authentication.logout=Вы вышли успешно.
+typeMismatch.quickOrder.orderItems.quantity=не число
